--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "series = pd.Series(lst)\n",
+    "print(series)"
    ]
   },
   {
@@ -61,11 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "series[2]"
    ]
   },
   {
@@ -277,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
