--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -585,8 +585,7 @@
    ],
    "source": [
     "# your code here\n",
-    "df_b[\"Score_3\"].mean()\n",
-    "# HELP?"
+    "df_b[\"Score_3\"].mean()\n"
    ]
   },
   {
