--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -47,7 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "ds = pd.DataSeries(lst)\n",
+    "print(ds)"
    ]
   },
   {
@@ -65,7 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(ds[2])"
    ]
   },
   {
@@ -99,7 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df = pd.DataFrame(b)\n",
+    "print(df)"
    ]
   },
   {
@@ -124,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df = df.rename(columns = {0:\"Score_1\", 1:\"Score_2\", 2:\"Score_3\", 3:\"Score_4\", 4:\"Score_5\"})"
    ]
   },
   {
@@ -140,7 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "sub = df.loc[:, [\"Score_1\", \"Score_3\", \"Score_5\"]]"
    ]
   },
   {
@@ -156,7 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ave_scr_3 = df.loc[:, [\"Score_3\"]].mean()"
    ]
   },
   {
@@ -172,7 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ave_scr_3 = df.loc[:, [\"Score_4\"]].max()"
    ]
   },
   {
@@ -188,7 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "med_scr_2 = df.loc[:, [\"Score_2\"]].median()"
    ]
   },
   {
@@ -225,7 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df_orders = pd.DataFrame(orders)"
    ]
   },
   {
@@ -241,7 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "tot_rev = df_orders.loc[:, [\"Revenue\"]].sum()\n",
+    "tot_rev"
    ]
   },
   {
@@ -257,7 +272,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "most_ex = df_orders.loc[:, [\"UnitPrice\"]].max()\n",
+    "print(most_ex)\n",
+    "leas_ex = df_orders.loc[:, [\"UnitPrice\"]].min()\n",
+    "print(leas_ex)\n",
+    "\n",
+    "dif = most_ex - leas_ex\n",
+    "print(dif)"
    ]
   }
  ],
@@ -277,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
