--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "# your code here\n",
+    "# to define the subset we can use 'loc' and use labels, or iloc and use indexes.\n",
     "df_subset = df.iloc[:,[0,2,4]]\n",
     "df_subset"
    ]
@@ -257,11 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Score_2    40.75\ndtype: float64"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Similar code of above, but with 'median' method. \n",
+    "median2 = df[['Score_2']].median(0)\n",
+    "median2"
    ]
   },
   {
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,11 +305,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n      <td>48</td>\n      <td>1.25</td>\n      <td>60.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Description  Quantity  UnitPrice  Revenue\n0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n5                      POPCORN HOLDER         7       0.85     5.95\n6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n7                       PARTY BUNTING         4       4.95    19.80\n8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Using 'Dataframe' method\n",
+    "\n",
+    "df_orders = pd.DataFrame(orders)\n",
+    "df_orders"
    ]
   },
   {
@@ -310,11 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(2978, 637.0)"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# For calculating the total, we use method 'sum'. I added both results into a tuple.\n",
+    "\n",
+    "orders_revenue = (df_orders['Quantity'].sum(0), df_orders['Revenue'].sum(0))\n",
+    "orders_revenue "
    ]
   },
   {
@@ -326,12 +362,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "The difference between the most expensive product and the less expensive one is:  11.77 euros\n"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "print('The difference between the most expensive product and the less expensive one is: ', df_orders['UnitPrice'].max(0) - df_orders['UnitPrice'].min(0), 'euros')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
