--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as  np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -47,7 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "s = pd.Series(lst)\n",
+    "s\n"
    ]
   },
   {
@@ -65,7 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "s[2]"
    ]
   },
   {
@@ -99,7 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_list = pd.DataFrame(b)\n",
+    "b_list"
    ]
   },
   {
@@ -124,7 +132,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "b_new = pd.DataFrame(b, columns= colnames)\n",
+    "b_new"
    ]
   },
   {
@@ -140,7 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "pd.DataFrame(b_new,columns = ['Score_1', 'Score_3','Score_5'])"
    ]
   },
   {
@@ -156,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_new['Score_3'].mean()"
    ]
   },
   {
@@ -172,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_new['Score_4'].max()"
    ]
   },
   {
@@ -188,7 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_new['Score_2'].median()"
    ]
   },
   {
@@ -225,7 +240,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "orders_panda = pd.DataFrame(orders)\n",
+    "\n",
+    "orders_panda"
    ]
   },
   {
@@ -241,7 +260,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "\n",
+    "##TOTAL QUANTITY ORDERED\n",
+    "print(f\"TOTAL QUANTITY ORDERED  = {orders_panda['Quantity'].sum()}\")\n",
+    "\n",
+    "\n",
+    "##TOTAL REVENUE GENERATED \n",
+    "print(f\"TOTAL REVENUE GENERATED  = {orders_panda['Revenue'].sum()}\")\n"
    ]
   },
   {
@@ -257,8 +284,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "## THE MOST EXPENSIVE ITEM\n",
+    "print(f\"THE MOST EXPENSIVE ITEM  = {orders_panda['UnitPrice'].max()}\")\n",
+    "\n",
+    "\n",
+    "##THE CHEAPEST ITEM \n",
+    "print(f\"THE CHEAPEST ITEM  = {orders_panda['UnitPrice'].min()}\")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -277,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
