--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "lst_pd = pd.Series(lst)\n",
+    "print(lst_pd)"
    ]
   },
   {
@@ -61,11 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "lst_pd[2]"
    ]
   },
   {
@@ -77,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +129,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_pd = pd.DataFrame(b)\n",
+    "print(b_pd)"
    ]
   },
   {
@@ -111,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +174,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score_1\n",
+      "Score_2\n",
+      "Score_3\n",
+      "Score_4\n",
+      "Score_5\n",
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for i in range(len(colnames)):\n",
+    "    print(colnames[i])\n",
+    "    b_pd.rename(columns={i:colnames[i]}, inplace=True)\n",
+    "print(b_pd)"
    ]
   },
   {
@@ -136,11 +217,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "subset_df = b_pd[['Score_1','Score_3','Score_5']]\n",
+    "print(subset_df)"
    ]
   },
   {
@@ -152,11 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.95000000000001\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "mean_score3 = b_pd['Score_3'].mean()\n",
+    "print(mean_score3)"
    ]
   },
   {
@@ -168,11 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "max_score4 = b_pd['Score_4'].max()\n",
+    "print(max_score4)"
    ]
   },
   {
@@ -184,11 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "median_score2 = b_pd['Score_2'].median()\n",
+    "print(median_score2)"
    ]
   },
   {
@@ -200,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +352,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Description  Quantity  UnitPrice  Revenue\n",
+      "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+      "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+      "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+      "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+      "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+      "5                      POPCORN HOLDER         7       0.85     5.95\n",
+      "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+      "7                       PARTY BUNTING         4       4.95    19.80\n",
+      "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+      "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "orders_df = pd.DataFrame(orders)\n",
+    "print(orders_df)"
    ]
   },
   {
@@ -237,11 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total quantity has been 2978 and it generated 637.0€\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "total_quantity = orders_df['Quantity'].sum()\n",
+    "\n",
+    "total_revenue = orders_df['Revenue'].sum()\n",
+    "\n",
+    "print('Total quantity has been {} and it generated {}€'.format(total_quantity,total_revenue))"
    ]
   },
   {
@@ -253,11 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The difference between the most expensive item and the least expensive is  11.77 €\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "most_expensive_item = orders_df['UnitPrice'].max()\n",
+    "least_expensive_item = orders_df['UnitPrice'].min()\n",
+    "\n",
+    "print('The difference between the most expensive item and the least expensive is ', (most_expensive_item - least_expensive_item), '€')"
    ]
   }
  ],
@@ -277,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
