Solving the last question about the difference between max and min UnitPrice

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -1241,6 +1241,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.77"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I though the \"ordered\" meant \"sorted\" that's why the previous is all wrong and stupid\n",
+    "orders.UnitPrice.max() - orders.UnitPrice.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
