--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -568,21 +568,14 @@
        "9     73.7     43.2     34.7"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b.drop([\"Score_2\", \"Score_4\"], axis = 1)"
+    "b[[\"Score_1\", \"Score_3\", \"Score_5\"]].copy() #we need to create a copy list if we don't want to modify original one"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
